# routes/documents.routes.js
@@ -1,5 +1,10 @@
 const express = require("express");
-const { deleteDoc, getMyDocs, getReceivedDocs, getAllChurchDocs } = require("../controllers/documents.controller");
+const {
+  deleteDoc,
+  getMyDocs,
+  getReceivedDocs,
+  getAllChurchDocs,
+} = require("../controllers/documents.controller");
 const protect = require("../middlewares/userAuth");
 const documentRouter = express.Router();
 
@@ -7,12 +12,12 @@ const documentRouter = express.Router();
 documentRouter.delete("/:user/doc/:id/delete", protect, deleteDoc);
 
 // Get my sent documents
-documentRouter.get('/:me/docs/sent', protect, getMyDocs)
+documentRouter.get("/:me/docs/sent", protect, getMyDocs);
 
 // Get received documents
-documentRouter.get('/:me/docs/received', protect, getReceivedDocs)
+documentRouter.get("/:me/docs/received", protect, getReceivedDocs);
 
 // Get all church docs
-documentRouter.get('/all/docs', protect, getAllChurchDocs)
+documentRouter.get("/all/docs", protect, getAllChurchDocs);
 
 module.exports = documentRouter;
